<resources>
    <string name="app_name">Currency Exchange Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="usd">0.00</string>
    <string name="eur">0.00</string>
    <string name="cny">0.00</string>
    <string name="jpy">0.00</string>
    <string name="cad">0.00</string>
    <string name="aud">0.00</string>
    <string name="sgd">0.00</string>
    <string name="pounds">Pounds</string>
    <string name="Pounds">Text</string>
    <string name="Viewamount">Enter Amount</string>
    <string name="Editthevalue">Enter Amount (£)</string>
    <string name="title_activity_rate">Rate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_information">information</string>
</resources>
