<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hsport.currencyexchangecalculator.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#ffffff"
    android:backgroundTintMode="src_in">

    <GridLayout
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="#84b5ff"
        android:id="@+id/gridLayout8"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:id="@+id/nameText"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginTop="40dp" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginLeft="-347dp"
            android:id="@+id/view0"
            android:hint="@string/Viewamount"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:textColor="#000000" />

    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="90dp"
        android:id="@+id/gridLayout">

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="USD"
            android:id="@+id/textView14"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:background="#84b5ff"
            android:autoText="true" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="USDrate"
            android:id="@+id/rate1"
            android:layout_row="1"
            android:layout_column="1"
            android:background="#84b5ff"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/usd"
            android:id="@+id/value1"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:background="#84b5ff"
            android:layout_marginLeft="10dp" />

    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/gridLayout2">

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="EUR"
            android:id="@+id/textView2"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:background="#84b5ff" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/eur"
            android:id="@+id/value2"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:background="#84b5ff"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="EURrate"
            android:id="@+id/rate2"
            android:layout_row="0"
            android:layout_column="1"
            android:background="#84b5ff"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center" />

    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/gridLayout3">

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="CNY"
            android:id="@+id/textView4"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:background="#84b5ff" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cny"
            android:id="@+id/value3"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:background="#84b5ff"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="CNYrate"
            android:id="@+id/rate3"
            android:layout_row="0"
            android:layout_column="1"
            android:background="#84b5ff"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center" />

    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/gridLayout3"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout4">

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="JPY"
            android:id="@+id/textView6"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:background="#84b5ff" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/jpy"
            android:id="@+id/value4"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:background="#84b5ff"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="JPYrate"
            android:id="@+id/rate4"
            android:layout_row="0"
            android:layout_column="1"
            android:background="#84b5ff"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center" />

    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/gridLayout5">

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="CAD"
            android:id="@+id/textView8"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:background="#84b5ff" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cad"
            android:id="@+id/value5"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:background="#84b5ff"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="CADrate"
            android:id="@+id/rate5"
            android:layout_row="0"
            android:layout_column="1"
            android:background="#84b5ff"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center" />

    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gridLayout6"
        android:layout_below="@+id/gridLayout7"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="SGD"
            android:id="@+id/textView12"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:background="#84b5ff" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sgd"
            android:id="@+id/value7"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:background="#84b5ff"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="SGDrate"
            android:id="@+id/rate7"
            android:layout_row="0"
            android:layout_column="1"
            android:background="#84b5ff"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center" />
    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/gridLayout5"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout7">

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="AUD"
            android:id="@+id/textView10"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:background="#84b5ff" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/aud"
            android:id="@+id/value6"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:background="#84b5ff"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="AUDrate"
            android:id="@+id/rate6"
            android:layout_row="0"
            android:layout_column="1"
            android:background="#84b5ff"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center" />

    </GridLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="400dp"
        android:layout_height="30dp"
        android:id="@+id/progressBar"
        android:layout_below="@+id/gridLayout8"
        android:layout_alignEnd="@+id/gridLayout8" />

</RelativeLayout>
